--- a/configs/digital_data_etl.yaml
+++ b/configs/digital_data_etl.yaml
@@ -1,12 +1,12 @@
 settings:
   docker:
-    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
+    parent_image: t.b.d
     skip_build: True
   orchestrator.sagemaker:
     synchronous: false
-    
+
 parameters:
-  user_full_name: Paul Iusztin # [First Name(s)] [Last Name]
+  user_full_name: Hiep Nguyen # [First Name(s)] [Last Name]
   links:
     # Substack decodingml
     - https://decodingml.substack.com/p/real-time-feature-pipelines-with?r=1ttoeh
@@ -79,3 +79,24 @@ parameters:
     - https://maximelabonne.substack.com/p/efficiently-iterating-over-rows-in-a-pandas-dataframe-7dd5f9992c01
     - https://maximelabonne.substack.com/p/q-learning-for-beginners-2837b777741
     - https://maximelabonne.substack.com/p/how-to-start-machine-learning-for-developers-in-2022-390af12b193f
+    # Maxime Labonne Blogs
+    - https://mlabonne.github.io/blog/posts/2024-07-29_Finetune_Llama31.html
+    - https://mlabonne.github.io/blog/posts/2024-07-15_The_Rise_of_Agentic_Data_Generation.html
+    # Medium (LLM Twin series)
+    - https://medium.com/decodingml/an-end-to-end-framework-for-production-ready-llm-systems-by-building-your-llm-twin-2cc6bb01141f
+    - https://medium.com/decodingml/your-content-is-gold-i-turned-3-years-of-blog-posts-into-an-llm-training-d19c265bdd6e
+    - https://medium.com/decodingml/i-replaced-1000-lines-of-polling-code-with-50-lines-of-cdc-magic-4d31abd3bc3b
+    - https://medium.com/decodingml/sota-python-streaming-pipelines-for-fine-tuning-llms-and-rag-in-real-time-82eb07795b87
+    - https://medium.com/decodingml/the-4-advanced-rag-algorithms-you-must-know-to-implement-5d0c7f1199d2
+    - https://medium.com/decodingml/turning-raw-data-into-fine-tuning-datasets-dc83657d1280
+    - https://medium.com/decodingml/8b-parameters-1-gpu-no-problems-the-ultimate-llm-fine-tuning-pipeline-f68ef6c359c2
+    - https://medium.com/decodingml/the-engineers-framework-for-llm-rag-evaluation-59897381c326
+    - https://medium.com/decodingml/beyond-proof-of-concept-building-rag-systems-that-scale-e537d0eb063a
+    - https://medium.com/decodingml/the-ultimate-prompt-monitoring-pipeline-886cbb75ae25
+    - https://medium.com/decodingml/build-a-scalable-rag-ingestion-pipeline-using-74-3-less-code-ac50095100d6
+    - https://medium.com/decodingml/build-multi-index-advanced-rag-apps-bd33d2f0ec5c
+    # Medium decodingml articles
+    - https://medium.com/decodingml/a-real-time-retrieval-system-for-rag-on-social-media-data-9cc01d50a2a0
+    - https://medium.com/decodingml/architect-scalable-and-cost-effective-llm-rag-inference-pipelines-73b94ef82a99
+    # Github
+    - https://github.com/PacktPublishing/LLM-Engineers-Handbook
