--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,21 @@ services:
       - local
     restart: always
 
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: "llm_twin_qdrant"
+    ports:
+      - 6333:6333
+      - 6334:6334
+    expose:
+      - 6333
+      - 6334
+    volumes:
+      - qdrant_data:/qdrant/storage
+    networks:
+      - local
+    restart: always
+
 volumes:
   mongo_data:
   qdrant_data:
