--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -11,4 +11,4 @@ parameters:
   per_device_train_batch_size: 2
   learning_rate: 3e-4
   dataset_huggingface_workspace: michaelnguyen11
-  is_dummy: true # Change this to 'false' to run the training with the full dataset and epochs.
+  is_dummy: false # Change this to 'false' to run the training with the full dataset and epochs.
