Add LLM evaluation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ run-import-data-warehouse-from-json = "poetry run python -m tools.data_warehouse
 
 # Training pipelines
 run-training-pipeline = "poetry run python -m tools.run --no-cache --run-training"
+run-evaluation-pipeline = "poetry run python -m tools.run --no-cache --run-evaluation"
 
 # Infrastructure
 ## Local infrastructure
